--- a/basic_express/package.json
+++ b/basic_express/package.json
@@ -10,8 +10,12 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "type": "commonjs",
+    "type": "module",
     "devDependencies": {
         "nodemon": "^3.1.10"
+    },
+    "dependencies": {
+        "body-parser": "^2.2.0",
+        "express": "^5.1.0"
     }
 }
